--- a/filers2/recording/player_style.kv
+++ b/filers2/recording/player_style.kv
@@ -3,8 +3,6 @@
 #:import pretty_space base_kivy_app.utils.pretty_space
 #:import pretty_time base_kivy_app.utils.pretty_time
 
-<RelativeStencilLayout@RelativeLayout+StencilView>
-
 <PlayersContainerWidget>:
     size_hint_min: self.minimum_size
 
@@ -87,6 +85,12 @@
     size_hint_min: self.minimum_size
     image_display: image_display
     spacing: '5dp'
+    canvas:
+        Color:
+            rgba: app.theme.text_primary
+        Rectangle:
+            pos: self.pos
+            size: self.size
     BoxLayout:
         size_hint_y: None
         size_hint_min_x: self.minimum_width
@@ -274,7 +278,7 @@
             Rectangle:
                 size: self.size
                 pos: self.pos
-    RelativeStencilLayout:
+    RelativeLayout:
         size_hint_min_y: '200dp'
         on_size: image_display.reload_buffer()
         canvas:
@@ -282,15 +286,16 @@
                 rgba: [0, 0, 0, 1]
             Rectangle:
                 size: self.size
-        BufferImage:
-            id: image_display
-            auto_bring_to_front: False
-            available_size: self.parent.size
-            size: self.image_size
-            size_hint: None, None
+        StencilView:
+            BufferImage:
+                id: image_display
+                auto_bring_to_front: False
+                available_size: self.parent.size
+                size: self.image_size
+                size_hint: None, None
 
-            do_scale: False
-            do_translation: False, False
-            do_rotation: False
-            on_rotation: root.player.display_rotation = self.rotation
-            rotation: root.player.display_rotation
+                do_scale: False
+                do_translation: False, False
+                do_rotation: False
+                on_rotation: root.player.display_rotation = self.rotation
+                rotation: root.player.display_rotation
