Enable starting to record multiple players.

--- a/filers2/filers2_style.kv
+++ b/filers2/filers2_style.kv
@@ -75,7 +75,7 @@
                         scale_down_color: True
                         source: 'flat_plus.png'
                         flat_color: app.theme.accent
-                        on_release: container.add_player()
+                        on_release: app.add_player()
             Screen:
                 name: 'compression'
                 BoxLayout:
